<resources>
    <string name="app_name">Rick And Morty Test Code</string>
    <string name="item_gender_tools_text">Genero: </string>
    <string name="item_last_location_tools_text">Última ubicación conocida:</string>
    <string name="item_first_seen_tools_text">Primera vez visto en:</string>
    <string name="item_type_tools_text">Tipo: </string>
    <string name="item_rick_type_tools_text">Rick is Toxic Side </string>
    <string name="item_number_episode_tools_text">Número de episodios en los que ha aparecido: </string>
    <string name="show_character">Personaje</string>
    <string name="show_location">Localización</string>
    <string name="show_episode">Epispodio</string>
</resources>